# board-games

./: .gitignore  LICENSE  README.md
client/: Cargo.toml  index.html
client/cli/: Cargo.toml
client/cli/src/: main.rs
client/public/: index.html  index.js  package-lock.json  package.json
client/public/sass/: main.scss
client/public/sass/base/: _base.scss  _resets.scss  _typography.scss
client/public/sass/components/: _board.scss  _connect4.scss  _navbar.scss
client/public/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
client/sass/: main.scss
client/sass/base/: _base.scss  _resets.scss
client/sass/components/: _board.scss  _connect4.scss  _login.scss  _navbar.scss  _stats.scss
client/src/: app.rs  connect4.rs  lib.rs  main.rs  switch.rs  toot_and_otto.rs
client/src/components/: connect4_board.rs  login.rs  navbar.rs  stats.rs  toot_and_otto_board.rs
client/src/connect4/: connect4.rs  cpu.rs  cpu_con4.rs  easy_cpu.rs  hard_cpu.rs  medium_cpu.rs  piece_color.rs
client/src/toot_and_otto/: cpu.rs  cpu_toot.rs  piece_letter.rs  player.rs  toot_and_otto.rs
client/src/types/: opponent.rs
client/static/: index.html  index.js
client/static/styles/: styles.css
server/: Cargo.toml  README
server/src/: database.rs  main.rs
server/src/controllers/: game_controller.rs  user_controller.rs
server/src/models/: game_model.rs  user_model.rs
