[package]
name = "client"
version = "0.1.0"
authors = ["Brock Chelle <bchelle@ualberta.ca>"]
edition = "2018"

[dependencies]
yew = "0.17"
yew-router = "0.14.0"
log = "0.4.6"
wasm-logger = "0.2.0"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
strum = "0.20.0"
strum_macros = "0.20"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
anyhow = "1.0.40"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.36"
features = [
    "Document",
    "DomStringMap",
    "Element",
    "Location",
    "HtmlElement",
    "Storage",
    "Window",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
]
