[package]
name = "server"
version = "0.1.0"
authors = ["Andrew Chen <akchen@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = {version="0.4.5", features=["json", "templates", "handlebars_templates"]}
mongodb = {version = "1.2.1", default-features = false, features = ["sync"]}
bson = "1.2.1"
rocket_cors = "0.5.1"
http = "0.2.4"

